--- a/app/src/main/res/layout/fragment_pokemon_details.xml
+++ b/app/src/main/res/layout/fragment_pokemon_details.xml
@@ -13,7 +13,7 @@
         <ImageView
             android:id="@+id/img_pokemon"
             android:layout_width="match_parent"
-            android:layout_height="300dp"
+            android:layout_height="400dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
@@ -29,6 +29,7 @@
             android:layout_marginTop="30dp"
             tools:text="Bulbasaur"
             android:textSize="25dp"
+            android:textAllCaps="true"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
